Rename next_schedule_date to scheduled_date in TransactionAutomations

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -897,12 +897,12 @@
           "edit": "Edit",
           "every": "Every",
           "last_schedule_date": "Last Run",
-          "next_schedule_date": "Next Run",
           "no_last_run": "-- Never --",
           "no_next_run": "-- Disabled --",
           "no_wallet": "-- Not Specified --",
           "reenable": "Reenable",
           "schedule": "Schedule",
+          "scheduled_date": "Next Run",
           "sub_header_summary": "Summary",
           "sub_header_transactions": "Past Transactions",
           "title": "Transaction Automation",
