--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -957,12 +957,12 @@
           "edit": "Editar",
           "every": "A cada",
           "last_schedule_date": "Última execução",
-          "next_schedule_date": "Próxima execução",
           "no_last_run": "-- Nunca --",
           "no_next_run": "-- Desabilitada --",
           "no_wallet": "-- Não Especificada --",
           "reenable": "Reabilitar",
           "schedule": "Agendamento",
+          "scheduled_date": "Próxima execução",
           "sub_header_summary": "Resumo",
           "sub_header_transactions": "Transações Passadas",
           "title": "Automação de Transação",
