--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -2,6 +2,8 @@
 pt-BR:
   views:
     app_name: Finance MicroManager
+    app_description: >-
+      Finance MicroManager is a personal finance management tool designed to allow users to meticulously track their day-to-day expenses. With a user-friendly interface, this web-based application ensures you have complete control and visibility into your financial life.
     categories:
       floating_button_label: Nova Categoria
       confirmation:
