Add login page screenshot to PWA manifest

--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -788,6 +788,11 @@
           "wallets": "Carteiras"
         }
       },
+      "manifest": {
+        "screenshots": {
+          "login_page": "Página de Login"
+        }
+      },
       "profile_share_invites": {
         "index": {
           "accept": "Aceitar",
