--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -730,6 +730,11 @@
           "wallets": "Wallets"
         }
       },
+      "manifest": {
+        "screenshots": {
+          "login_page": "Login page"
+        }
+      },
       "profile_share_invites": {
         "index": {
           "accept": "Accept",
