Use floating action button for reconciliations index

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -782,6 +782,7 @@
         }
       },
       "reconciliations": {
+        "floating_button_label": "New Reconciliation",
         "form": {
           "cancel": "Cancel",
           "date_label": "Date",
