--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -840,6 +840,7 @@
         }
       },
       "reconciliations": {
+        "floating_button_label": "Nova Reconciliação",
         "form": {
           "cancel": "Cancelar",
           "date_label": "Data",
