--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -167,6 +167,7 @@ pt-BR:
         cancel: Cancelar
         confirm: Enviar Convite
     reconciliations:
+      floating_button_label: Nova Reconciliação
       info_alert:
         message: >-
           Há uma reconcilição em andamento para o dia %{date}. <a href="%{href}">Clique aqui</a> para acessá-la.
