Add more screenshots, improve README

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -755,6 +755,7 @@
       },
       "manifest": {
         "screenshots": {
+          "dashboard": "Dashboard",
           "login_page": "Login page"
         }
       },
