--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -119,6 +119,7 @@ en:
     manifest:
       screenshots:
         login_page: Login page
+        dashboard: Dashboard
     profiles:
       floating_button_label: New Profile
       index:
