--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -119,6 +119,7 @@ pt-BR:
     manifest:
       screenshots:
         login_page: Página de Login
+        dashboard: Página Inicial
     profiles:
       floating_button_label: Novo Perfil
       index:
