Move prediction form action logic to modal, correctly display category and wallet names

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -949,12 +949,13 @@
           "label_action_wallet": "-- With wallet --",
           "label_condition_category": "-- Category --",
           "label_condition_wallet": "-- Wallet --",
-          "label_with": "with value",
+          "label_with": "with",
           "name_label": "Prediction Name",
           "new_title": "New Transaction Prediction",
           "select_placeholder_label": "-- Choose --",
           "sub_header_action": "Then fill",
           "sub_header_conditions": "When",
+          "sub_header_edit_action": "Edit Action",
           "sub_header_edit_condition": "Edit Condition",
           "submit": "Save",
           "transaction_date_label": "Transaction Date",
