--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1009,12 +1009,13 @@
           "label_action_wallet": "-- Com a carteira --",
           "label_condition_category": "-- Categoria --",
           "label_condition_wallet": "-- Carteira --",
-          "label_with": "com o valor",
+          "label_with": "com",
           "name_label": "Nome do Autopreenchimento",
           "new_title": "Novo Autopreenchimento",
           "select_placeholder_label": "-- Escolha --",
           "sub_header_action": "Então preencha",
           "sub_header_conditions": "Quando",
+          "sub_header_edit_action": "Editar Ação",
           "sub_header_edit_condition": "Editar Condição",
           "submit": "Salvar",
           "transaction_date_label": "Data da Transação",
