--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -20,6 +20,8 @@ en:
           last_day_of_month: last day of month
           first_business_day_of_month: first business day of month
           last_business_day_of_month: last business day of month
+      transaction_prediction:
+        rules_json: Prediction Rules
       user:
         locale: Language
     errors:
